# IA_Kibus

./: .directory  .main.cpp.swn  CMakeLists.txt  README.md  main.cpp  sdl_engine.kdev4
.kdev4/: sdl_engine.kdev4
include/: bee.hpp  button.hpp  functions.hpp  hero.hpp  kimbus.h  mapa.h  slider.hpp  timer.hpp
resources/: map 1.txt  map.txt  map_heat.txt
resources/sprites/: .directory
src/: .hero.cpp.swm  bee.cpp  button.cpp  hero.cpp  kimbus.cpp  mapa.cpp  slider.cpp  timer.cpp
